added more changes

--- a/index.html
+++ b/index.html
@@ -30,7 +30,40 @@
         </div>
     </header>
 
+    <section class="sub_header">
+        <div class="social">
+            <p class="social_text">Follow us</p>
+            <svg class="social_wrapper">
+                <use class="social_photo" href="./images/instagram.svg"></use>
+            </svg>
+            <svg class="social_wrapper">
+                <use class="social_photo" href="./images/twitter.svg"></use>
+            </svg>
+        </div>
+
+        <div class="mountains_block">
+            <div class="mountains_sub">  
+                <h2 class="mountains_title">A Hiking guide</h2>
+            </div>
+
+            <div class="prepared_block">
+                <h1 class="prepared_title">Be prepared for the Mountains and beyond!</h1>
+                <p class="prepared_text">scroll down</p>
+            </div>
+
+            <div class="start_block">
+                <p class="start_text">Start</p>
+                <p class="start_text">01</p>
+                <p class="start_text">02</p>
+                <p class="start_text">03</p>
+            </div>
+
+            <div class="start_border"></div>
+        </div>
+    </section>
+
     
+
 </div>
 </body>
 </html>
