added some changes

--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 <head>
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/style.css">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,700;1,700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
@@ -65,7 +69,7 @@
     <section class="level">
         <div class="level_left_wrapper">
         <div class="level_one_block">
-            <p class="level_one_text">01</p>
+            <p class="opacity_number">01</p>
         </div>
 
         <div class="level_slash_block">
@@ -115,7 +119,6 @@
                     <use href="./images/arrow.svg"></use>
                 </svg>
             </div>
-        </div>
     </section>
 
     <section class="key_block">
@@ -175,6 +178,7 @@
             </ul>
         </div>
     </footer>
+</div>
 
 </div>
 </body>
