added more changes

--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
         <div class="header_account">
             <svg class="account_logo_wrapper">
                 <use class="account_photo" href="./images/cart.svg"></use>
-                <a href="" class="account_link">Account</a>
             </svg>
+            <a href="" class="account_link">Account</a>
         </div>
     </header>
 
@@ -46,7 +46,7 @@
         </div>
 
         <div class="mountains_block">
-            <div class="mountains_sub">  
+            <div class="mountains_sub">
                 <h2 class="mountains_title">A Hiking guide</h2>
             </div>
 
@@ -62,7 +62,7 @@
                 <p class="start_text">03</p>
             </div>
 
-            <div class="start_border"></div>
+
         </div>
     </section>
 
@@ -73,7 +73,7 @@
         </div>
 
         <div class="level_slash_block">
-            <p class="level_text">pennis</p>
+            <p class="yellow_border"></p>
             <p class="level_text">GEt Started</p>
         </div>
 
@@ -81,7 +81,7 @@
         <p class="level_sub_text">Determining what level of hiker you are can be an important tool when planning future hikes. This hiking level guide will help you plan hikes according to different hike ratings set by various websites like All Trails and Modern Hiker. What type of hiker are you – novice, moderate, advanced moderate, expert, or expert backpacker?</p>
 
         <div class="last_slash_block">
-            <p class="last_text"></p>
+            <p class="last_text">read more</p>
             <svg class="last_ico">
                 <use href="./images/arrow.svg"></use>
             </svg>
