added full css styles

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
             </div>
     
             <div class="key_slash_block">
-                <p class="key_text">pennis</p>
+                <p class="key_text"></p>
                 <p class="key_text">where you go is the key</p>
             </div>
     
